<resources>
    <string name="app_name" translatable="false">Kaha BLE Tool-1.0.4</string>

    <string name="ble_not_supported">设备不支持BLE</string>
    <string name="label_data">数据:</string>
    <string name="label_device_address">设备地址:</string>
    <string name="label_state">状态:</string>
    <string name="no_data">没有数据</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开</string>
    <string name="title_devices">扫描BLE设备</string>
    <string name="error_bluetooth_not_supported">设备不支持蓝牙</string>

    <string name="unknown_device">未知设备</string>
    <string name="unknown_characteristic">未知特征</string>
    <string name="unknown_service">未知服务</string>
    <string name="scan_devices">扫描设备</string>

    <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>
    <string name="empty_num" translatable="false">0</string>
    <string name="no_heartrate_characteristic">获取不到心率特征</string>
    <string name="no_heartrate_service">获取不到心率服务</string>
    <string name="null_heart_rate" translatable="false">--</string>
    <string name="heart_rate_value">心率:</string>
    <string name="menu_share">分享</string>
    <string name="menu_optional">选择</string>
    <string name="menu_cancel">取消</string>
    <string name="sync_time">同步时间</string>
    <string name="read_time">读取时间</string>
    <string name="read_battery">读取电量</string>
    <string name="clear_log">清除记录</string>
    <string name="system_update">系统更新</string>
    <string name="sport_notification">运动通知</string>
    <string name="flash_id" translatable="false">FlashId</string>
    <string name="g_sensor" translatable="false">G-sensor</string>
    <string name="hr_control">心率控制</string>
    <string name="history_step">历史步数</string>
    <string name="title_activity_ble_function" translatable="false">BleFunctionActivity</string>

    <string name="device_update">设备升级</string>
    <string name="function_test">功能测试</string>
    <string name="unconnected_device">未连接设备</string>
    <string name="null_data">数据为空</string>
    <string name="disconnected__failed_update">连接已断开,更新失败</string>
    <string name="complete_read">读取完成</string>
    <string name="failed_write">写入失败</string>
    <string name="update_mode">升级模式</string>
    <string name="start_update">开始升级</string>
    <string name="connected_device">设备已连接</string>
    <string name="firmware_vaildating">固件验证中</string>
    <string name="disconnecting_device">设备断开中</string>
    <string name="dusconnected_device">设备已断开</string>
    <string name="update_completed">更新完成</string>
    <string name="update_aborted">更新终止</string>
    <string name="update_error">更新错误</string>
    <string name="file_path">文件路径</string>
    <string name="choose_file_after_mode">请选择更新模式后再选择文件</string>
    <string name="ui_update">界面升级</string>
    <string name="font_update">字库升级</string>
    <string name="ota_update">固件升级</string>
    <string name="face_update">表盘升级</string>
    <string name="dfu_update">DFU升级</string>
    <string name="send_failed">"发送失败 "</string>
    <string name="send_completed">发送完成</string>
    <string name="disconnected_send_failed">连接已断开，发送失败</string>
    <string name="disconnected_device">设备已断开</string>
    <string name="cannot_find_mode">找不到需要升级的模式</string>
    <string name="cannot_find_uri">找不到uri</string>
    <string name="cannot_find_path">找不到路径</string>
    <string name="menu_search">搜索</string>
    <string name="menu_start">开始</string>
    <string name="menu_stop_vibrato">关闭震动</string>
    <string name="menu_normal_vibrato">正常震动</string>
    <string name="menu_strong_vobrato">强震动</string>
    <string name="device_name">设备名称</string>
    <string name="history_spo2">历史SPO2</string>
    <string name="temp_control">温度控制</string>
    <string name="history_hr">历史心率</string>
    <string name="history_temp">历史温度</string>
    <string name="activity_function">活动功能</string>
    <string name="number_setting">数值设置</string>
    <string name="volume_control">音量调节</string>
    <string name="device_mac">物理地址</string>
    <string name="time_format">时间格式</string>
    <string name="test_vibrato">震动</string>
    <string name="connecting_device">设备连接中</string>
    <string name="ensure">确定</string>
    <string name="number">数值</string>
    <string name="setting">设置</string>
    <string name="value_setting">设置数值：</string>
    <string name="setting_number_small">设置数值过小</string>
    <string name="send_success">发送完成</string>
    <string name="select_days_within_seven">请选择七天内的日期</string>
    <string name="setting_out_range">设置超出范围</string>
    <string name="sync_success">同步成功</string>
    <string name="sync_fialure">同步失败</string>
    <string name="battery_level">电量:</string>
    <string name="hr_setting_success">心率设置成功</string>
    <string name="volume_setting_success">音量设置完成</string>
    <string name="date_format_setting_success">时间格式设置成功</string>
    <string name="temp_control_success">温度控制设置成功</string>
    <string name="failure_update">更新失败</string>
    <string name="complete_update">升级完成</string>
    <string name="failure_send">发送失败</string>
    <string name="updating">升级中</string>
    <string name="firmware_version">固件版本</string>
    <string name="export_log">导出日志</string>
</resources>