<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="" />
    <item
        android:id="@+id/menu_scan"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="101"
        android:title="@string/menu_stop"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="102"
        android:title="@string/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>
