<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.BleFunctionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="#039BE5"
        app:theme="@style/ToolbarTheme"
        app:title="@string/unknown_device"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ble_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100"
        android:layout_margin="15dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/device_update"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/update_pic" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ble_debug"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100"
        android:layout_margin="15dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="@dimen/dimen_5">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/function_test"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/debug_pic" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>